      but status_code can be used
    * host port returns port from HOST or scheme
    * openapi wrapper binds request to Host or Forwarded header
    * new PoorSession interface
        * use secret_key instead of Request object in __init__ method
        * use load method for loading cookie
    * handler_from_before is called only once

==== 2.3.4 ====
    * new cgi.py interface fix

==== 2.3.3 ====
    * supported space in url with http digest
    * Request.construct_url improvement
    * fix inconsistent return statements
    * fix parsing empty form error and Request.has_body property
    * fix error when Request.__init__ failed

==== 2.3.2 ====
    * mypy support

==== 2.3.0 ====
    * Errors in parsing requests end with 500 Internal Server Error
    * JsonDict and JsonList objects for dict or list json request variant.
    * JSONGeneratorResponse to returns json from generators as generator.
    * Fixies for new openapi_core 0.13.0 version.
    * Better error log when error in after_request process
    * PoorSession cookie flags:
        * always HttpOnly attribute
        * Secure attribute by secure argument
        * SameSite attribute by same_site argument
        * Domain attribute by domain argument
        * Path attribute could be None
        * Max-Age attribute by max_age argument
    * SessionError when not possible to decode session
    * JSONResponse and JSONGeneratorResponse without charset
    * CORS and Security example for OpenAPI
    * EmptyResponse don't use headers warning
    * charset fix in make_response
    * some HTTP/0.9 suport fixes
    * JSONGeneratorResponse is defined as extras
    * OpenAPI tests fix - better openapi example
    * Request.hostname contains only hostname without port
    * Request.timestamp - set as soon as possible
    * empty FieldStorage did't raise exception
    * more info about request in internal server error page
    * Request path as right attribute for /path