@@ -10,6 +10,7 @@
         * use secret_key instead of Request object in __init__ method
         * use load method for loading cookie
     * handler_from_before is called only once
+    * fix FileResponse Content-Length header
 
 ==== 2.3.4 ====
     * new cgi.py interface fix
